--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@nuxtjs/auth-next": "5.0.0-1643278128.1c7fef7",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/component-cache": "^1.1.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
